syntax = "proto3";

package common.v1;

import "validate/validate.proto";

option go_package = "github.com/aleksandr-mv/school_schedule/shared/pkg/proto/common/v1;common_v1";

// =============================================================================
// Identifier Common Types (common.v1)
// =============================================================================

// Универсальный идентификатор для поиска по ID или имени
message GetIdentifier {
  oneof identifier {
    string id = 1 [(validate.rules).string.uuid = true];
    string name = 2 [(validate.rules).string.min_len = 1];
  }
}
